assets/scss/molecules/cards/_publication-card.scss
.publication-card {
    @extend .article-card;

    &.hover-publication {

        .content {

            .title-description {
                margin-bottom: 0;
                min-height: 240px;
            }

            .medium-copy {
                margin-top: 35px;
                overflow: hidden;
                display: -webkit-box;
                -webkit-line-clamp: 5;
                -webkit-box-orient: vertical;

                @include breakpoint(1500px up) {
                    -webkit-line-clamp: 4;
                }

            }

            .cta {
                bottom: 0;
                margin-top: 25px;
                position: relative;
            }
        }

        &:not(.large):not(.wide) {
            .hover-slide {
                @include breakpoint(small only) {
                    display: flex;
                }
            }
        }

        .hover-slide {
            background: transparent;

            .publication-image {
                height: 100%;
                padding: 63px 30px;

                @include breakpoint(small only) {
                    max-height: 500px;
                    padding: 18px 30px;
                }

                .image {
                    height: 100%;
                    display: flex;
                    min-width: 100%;
                    min-height: 100%;
                    justify-content: center;

                    img {
                        height: 100%;
                    }
                }
            }

            &:before {
                background: transparent;
            }
        }
    }
}

